fixed text overflow on add edition page

--- a/src/client/stylesheets/style.less
+++ b/src/client/stylesheets/style.less
@@ -409,3 +409,10 @@ hr.wide {
 		margin-left: 0.2em;
 	}
 }
+
+@media only screen and (max-width: 451px){
+	#existing-edition-group-search-button{
+		font-size: calc(3px + 1.6vw);
+    padding: 6px 5px;
+	}
+}
